--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "next": "14.0.4",
+    "next": "^14.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
@@ -24,7 +24,7 @@
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.1.1",
     "typescript": "^5"
   }
 }
